reports/A_chapter6.log
Traceback (most recent call last):
  File "D:\users\anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "D:\users\anaconda3\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "D:\users\anaconda3\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "D:\users\anaconda3\lib\asyncio\base_events.py", line 579, in run_until_complete
    return future.result()
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# "ì•ˆë…•í•˜ì„¸ìš”. ë°˜ê°‘ìŠµë‹ˆë‹¤."ë¥¼ ì¶œë ¥í•˜ëŠ” hello()í•¨ìˆ˜ ì •ì˜í•˜ê³  í˜¸ì¶œí•´ë³´ê¸°
# í•¨ìˆ˜ì •ì˜(def)ê°€ ë¨¼ì € ì´ë£¨ì ¸ì•¼ í•¨. ê·¸ í›„ì— í˜¸ì¶œ
def 
------------------

[1;36m  File [1;32m"<ipython-input-1-c874af828762>"[1;36m, line [1;32m3[0m
[1;33m    def[0m
[1;37m        ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-c874af828762>, line 3)

